# sky-alert

./: .pre-commit-config.yaml  README.md  main.py  pull_request_template.md  pyproject.toml  pyvenv.cfg
.github/workflows/: mypy.yml  unittests.yml
sky_alert/: constants.py  endpoint.py  locations.txt  openweather_service.py  protocol.py
tests/: test_constants.py  test_endpoint.py  test_openweather_service.py
